--- a/css/main.css
+++ b/css/main.css
@@ -67,6 +67,10 @@ a:hover {
 	text-decoration: underline;
 }
 
+ul {
+	margin: 0 0 1em 0;
+}
+
 li {
 	margin: 0 0 4px 2em;
 }
@@ -104,6 +108,7 @@ div.title {
 }
 
 div.title div.logo {
+	background-color: #373737;
 	background-color: #2a2a2a;
 	border: 1px solid #ffaa00;
 	color: #ffaa00;
@@ -181,7 +186,7 @@ div.post {
 	
 	border: 1px solid #e1e1e1;
 	border-top: 2px solid #ffaa00;
-	padding: 0 1em;
+	padding: 1em;
 	
 	background-color: #e1e1e1;
 	color: #272727;
